--- a/css/mon-histoire.css
+++ b/css/mon-histoire.css
@@ -1,115 +1,1 @@
-header {
-    background-image: none !important;
-    background-color: white;
-    height: auto;
-}
-
-main {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-main .container {
-    padding: 120px;
-}
-
-.container img{
-    width: 15vw;
-    height: 15vw;
-    shape-outside: circle();
-    float: left;
-    margin-right: 60px;
-    border-radius: 100rem;
-    object-fit: cover;
-    object-position: top;
-}
-
-h2 {
-    text-decoration: none;
-    font-weight: lighter;
-}
-
-.mobile {
-    display: none;
-}
-
-.desktop {
-    display: block;
-}
-
-.button {
-    background-color: #323232;
-    color: white;
-    padding: 10px 20px;
-    margin: 0 !important;
-    margin-top: 30px !important;
-    font-family: "open sans";
-    font-weight: lighter;
-    width: fit-content;
-    transition: all 200ms ease-in-out;
-}
-
-.button:hover {
-    background-color: #AF8738;
-}
-
-@media only screen and (min-width: 2500px) {
-    main .container {
-        max-width: 60vw;
-        padding: 0 !important;
-    }
-}
-
-@media only screen and (max-width: 1900px) {
-    main {
-        height: auto !important;
-    }
-    h2 {
-        font-size: 2rem;
-        white-space: nowrap;
-    }
-    main .container {
-        max-width: 100vw !important;
-        padding: 0  10px !important;
-    }
-
-    p {
-        letter-spacing: 0;
-        /* text-align: center; */
-        line-height: 1.4;
-        font-size: 16px;
-        padding: 0 10px !important;
-    }
-
-    .mobile {
-        display: block;
-    }
-
-    .desktop {
-        display: none;
-    }
-
-    img {
-        width: 100% !important;
-        height: auto !important;
-        border-radius: 0 !important;
-        margin: 0 !important;
-        margin-bottom: 60px !important;
-    }
-
-    .row {
-        align-items: center;
-    }
-
-    .col {
-        align-items: center;
-    }
-
-    .button {
-        margin-bottom: 30px !important;
-    }
-
-}
+header{background-image:none!important;background-color:white;height:auto}main{width:100%;height:100vh;display:flex;justify-content:center;align-items:center}main .container{padding:120px}.container img{width:15vw;height:15vw;shape-outside:circle();float:left;margin-right:60px;border-radius:100rem;object-fit:cover;object-position:top}h2{text-decoration:none;font-weight:lighter}.mobile{display:none}.desktop{display:block}.button{background-color:#323232;color:white;padding:10px 20px;margin:0!important;margin-top:30px!important;font-family:"open sans";font-weight:lighter;width:fit-content;transition:all 200ms ease-in-out}.button:hover{background-color:#AF8738}@media only screen and (min-width:2500px){main .container{max-width:60vw;padding:0!important}}@media only screen and (max-width:1900px){main{height:auto!important}h2{font-size:2rem;white-space:nowrap}main .container{max-width:100vw!important;padding:0 10px!important}p{letter-spacing:0;line-height:1.4;font-size:16px;padding:0 10px!important}.mobile{display:block}.desktop{display:none}img{width:100%!important;height:auto!important;border-radius:0!important;margin:0!important;margin-bottom:60px!important}.row{align-items:center}.col{align-items:center}.button{margin-bottom:30px!important}}
