--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -99,7 +99,7 @@
         font-size: 70px !important;
     }
 
-    .sutdio-contact {
+    .studio-contact {
         flex-direction: column !important;
 
         a {
