--- a/css/style.css
+++ b/css/style.css
@@ -445,10 +445,10 @@ header nav a {
   h3 {
     font-size: 70px !important;
   }
-  .sutdio-contact {
+  .studio-contact {
     flex-direction: column !important;
   }
-  .sutdio-contact a {
+  .studio-contact a {
     margin-left: 0 !important;
     margin-top: 0;
   }
@@ -663,7 +663,7 @@ h3 {
   margin-bottom: 40px !important;
 }
 
-h1 {
+h3 {
   font-size: 80px;
   font-family: "Abhaya Libre";
   font-weight: normal;
