--- a/css/style.css
+++ b/css/style.css
@@ -794,6 +794,9 @@ main {
   body {
     overflow-x: hidden !important;
   }
+  h1, h2, h3 {
+    font-family: "Times New Roman", Times, serif !important;
+  }
   #title {
     display: block;
   }
