--- a/style.scss
+++ b/style.scss
@@ -178,6 +178,8 @@ main {
 @media only screen and (max-width: 1900px) {
   body {
     overflow-x: hidden !important;
+  }h1, h2, h3 {
+    font-family: 'Times New Roman', Times, serif !important;
   }
   #title {
     display: block;
