--- a/style.scss
+++ b/style.scss
@@ -4,6 +4,28 @@
 @import "./scss/gallery";
 @import "./scss/contact";
 @import "./scss/cards";
+
+@font-face {
+  font-family: 'Times New Roman';
+  src: url(/) format('truetype');
+}
+@font-face {
+  font-family: 'Times New Roman';
+  src: url("/assets/liberation-serif/LiberationSerif-Regular.ttf") format('truetype');
+  font-style: italic;
+}
+@font-face {
+  font-family: 'Times New Roman';
+  src: url("/assets/liberation-serif/LiberationSerif-Bold.ttf") format('truetype');
+  font-weight: bold;
+}
+@font-face {
+  font-family: 'Times New Roman';
+  src: url("/assets/liberation-serif/LiberationSerif-BoldItalic.ttf") format('truetype');
+  font-style: italic;
+  font-weight: bold;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -178,7 +200,7 @@ main {
 @media only screen and (max-width: 1900px) {
   body {
     overflow-x: hidden !important;
-  }h1, h2, h3 {
+  }h1, h3 {
     font-family: 'Times New Roman', Times, serif !important;
   }
   #title {
