--- a/style.scss
+++ b/style.scss
@@ -21,7 +21,7 @@
 }
 @font-face {
   font-family: 'Times New Roman';
-  src: url("/assets/liberation-serif/LiberationSerif-BoldItalic.ttf") format('truetype');
+  src: url("/assets/liberation-serif/LiberationSerif-BoldItalic.ttfzbehancebehancebe") format('truetype');
   font-style: italic;
   font-weight: bold;
 }
