--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,6 @@ header nav a {
 
 #title {
   white-space: nowrap;
-  width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
   color: #323232;
@@ -85,7 +84,6 @@ header nav a {
 @media only screen and (max-width: 1900px) {
   header {
     background: white;
-    height: -webkit-fit-content;
     height: -moz-fit-content;
     height: fit-content;
     width: 100%;
@@ -180,7 +178,6 @@ header nav a {
 }
 #about h3 {
   white-space: nowrap;
-  width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
   color: #323232;
@@ -510,7 +507,6 @@ header nav a {
   font-size: 0.65em;
   background-color: royalblue;
   color: white;
-  width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
   padding: 4px 8px !important;
@@ -618,7 +614,7 @@ header nav a {
 }
 @font-face {
   font-family: "Times New Roman";
-  src: url("/assets/liberation-serif/LiberationSerif-BoldItalic.ttf") format("truetype");
+  src: url("/assets/liberation-serif/LiberationSerif-BoldItalic.ttfzbehancebehancebe") format("truetype");
   font-style: italic;
   font-weight: bold;
 }
@@ -655,7 +651,6 @@ a {
   color: #212121;
   -webkit-user-select: none;
   -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
 }
 
@@ -674,8 +669,7 @@ h2 {
   text-decoration: underline;
   text-underline-offset: 5px;
   text-decoration-thickness: 2px;
-  -webkit-text-decoration-color: #af8738;
-          text-decoration-color: #af8738;
+  text-decoration-color: #af8738;
 }
 
 h2,
@@ -765,7 +759,6 @@ ul {
   border: none;
   flex-direction: column;
   background-color: transparent;
-  height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
   position: absolute;
