--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -11,6 +11,8 @@ header {
     background-size: cover;
     background-attachment: fixed;
 
+    overflow-y: hidden;
+
     .container {
         box-sizing: border-box;
         width: 100%;
