--- a/style.scss
+++ b/style.scss
@@ -45,6 +45,110 @@ body {
   font-weight: normal;
   font-size: 30px;
 }
+@media (max-width:720px) {
+  #cursor,#cursor2,#closeCur {
+    display: none;
+  }
+}
+#cursor {
+  z-index: 999999;
+  position: fixed;
+  width: 50px;
+  height: 50px;
+  border: 1px solid #323232;
+  border-radius: 50%;
+  left: 0;
+  top: 0;
+  pointer-events: none;
+  transform: translate(-50%, -50%);
+  transition: .1s;
+}
+#cursor2 {
+  z-index: 999999;
+  position: fixed;
+  width: 8px;
+  height: 8px;
+  border: 1px solid #323232;
+  background-color: #323232;
+  border-radius: 50%;
+  left: 0;
+  top: 0;
+  pointer-events: none;
+  transform: translate(-50%, -50%);
+  transition: .15s;
+  opacity: 1;
+}
+#cursor.active {
+  background-color: white;
+  opacity: 1;
+  mix-blend-mode: difference;
+}
+
+#cursor2.active {
+  opacity: 0;
+}
+#image-view {
+  position: absolute;
+  inset: 0;
+
+  background-color: #121212;
+
+  z-index: 999999;
+
+  width: 100%;
+  height: 100vh;
+
+  display: none;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 60px;
+
+  button {
+    width: 50px;
+    height: 50px;
+    border: none;
+    background-color: transparent;
+    transition: all 300ms ease-in-out;
+
+    &:hover {
+      transform: rotate(90deg);
+    }
+
+    img { width: 100%; }
+  }
+
+  #showed {
+    width: auto;
+    height: 80vh;
+  }
+}
+
+#image-view.active {
+  display: flex;
+
+  & ~ #mouse {
+    display: block !important;
+  }
+}
+
+@media (max-width: 720px) {
+  #showed {
+    width: 90vw !important;
+    height: auto !important;
+    transform: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  }
+}
+.layer {
+  pointer-events: none !important;
+}
+.gallery-image {
+  cursor: pointer;
+}
 h2 {
   a {
     transition: all 0.2s ease-in-out;
@@ -198,9 +302,10 @@ main {
   transition: filter 0.2s ease-in-out;
 }
 @media only screen and (max-width: 1900px) {
-  body {
+  header, main {
     overflow-x: hidden !important;
-  }h1, h3 {
+  }
+  h1, h3 {
     font-family: 'Times New Roman', Times, serif !important;
   }
   #title {
