--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ header {
   height: 100vh;
   position: relative;
   background-image: url("../assets/images/background.webp");
-  background-position: center;
+  background-position: 0 -250px;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -309,6 +309,7 @@ header nav a {
 }
 #gallery li {
   height: 30vh;
+  max-width: 50vw;
   flex-grow: 1;
   position: relative;
 }
@@ -336,6 +337,12 @@ header nav a {
      object-position: center;
 }
 
+@media (max-width: 1024px) {
+  #gallery li {
+    height: 40vh;
+    max-width: none !important;
+  }
+}
 @media (max-aspect-ratio: 1/1) and (max-width: 480px) {
   #gallery {
     padding-top: 20px !important;
@@ -678,6 +685,7 @@ body {
 #cursor.active {
   background-color: white;
   opacity: 1;
+  border: none;
   mix-blend-mode: difference;
 }
 
@@ -714,6 +722,7 @@ body {
 #image-view #showed {
   width: auto;
   height: 80vh;
+  box-shadow: 0px 0px 1000px white;
 }
 
 #image-view.active {
