--- a/scss/_gallery.scss
+++ b/scss/_gallery.scss
@@ -14,6 +14,7 @@
 
       li {
         height: 30vh;
+        max-width: 50vw;
         flex-grow: 1;
         position: relative;
 
@@ -41,6 +42,15 @@
         vertical-align: bottom;
         object-position: center;
       }
+}
+
+@media (max-width: 1024px) {
+  #gallery {
+    li {
+      height: 40vh;
+      max-width: none !important;
+    }
+  }
 }
 
 @media (max-aspect-ratio: 1/1) and (max-width: 480px) {
