--- a/css/style.css
+++ b/css/style.css
@@ -297,6 +297,7 @@ header nav a {
   }
 }
 #gallery {
+  padding-bottom: 100px !important;
   background-color: rgb(250, 250, 250);
 }
 #gallery .container {
@@ -367,7 +368,6 @@ header nav a {
 }
 #contact {
   position: relative;
-  margin-top: 100px !important;
   width: 100%;
   height: 100vh;
   background-image: url("../assets/images/contact-bg.webp");
@@ -700,11 +700,14 @@ body {
   z-index: 999999;
   width: 100%;
   height: 100vh;
-  display: none;
+  display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   gap: 60px;
+  opacity: 0;
+  transform: scale(0);
+  transition: all 500ms ease-in-out;
 }
 #image-view button {
   width: 50px;
@@ -726,10 +729,8 @@ body {
 }
 
 #image-view.active {
-  display: flex;
-}
-#image-view.active ~ #mouse {
-  display: block !important;
+  opacity: 1;
+  transform: scale(1);
 }
 
 @media (max-width: 720px) {
