--- a/style.scss
+++ b/style.scss
@@ -127,7 +127,7 @@ body {
   #showed {
     width: auto;
     height: 80vh;
-    box-shadow: 0px 0px 1000px white;
+    // box-shadow: 0px 0px 1000px white;
   }
 }
 
